[package]
name = "xgf_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.11.22"
colored = "2.0.4"
rand = "0.8.5"
ua_generator = "0.3.5"